[package]
name = "mt"
version = "0.1.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/monorepo-toolkit"
homepage = "https://github.com/conradkleinespel/monorepo-toolkit"
description = "Tools to manage a monorepo"

[dependencies]
clap = "4.5"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tempfile = "3.19"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ansi_term = "0.12"
rclio = { path = "../rclio" }
